<resources>
    <string name="app_name">Data Fill</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_age">Enter your age.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="department_name">Department Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="any_additional_details">Any additional details</string>
    <string name="submit">SUBMIT</string>
    <string name="ola_electric">Ola Electric</string>
    <string name="ola_cabs">Ola Cabs</string>
    <string name="ola_foods">Ola Foods</string>
    <string name="ola_money">Ola Money</string>
    <string name="human_resource">Human Resource</string>
    <string name="save">save</string>
    <string name="department">Department</string>
    <string name="go_back_button">Go Back</string>
    <string name="back_to_previous_screen">Back to previous screen</string>
</resources>